倒數計時完成

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="~/css/review.css" />
     <!-- Site CSS -->
     <link rel="stylesheet" href="~/css/bootstrap.min.css">
-            @* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"> *@
+        @* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"> *@
     <link rel="stylesheet" href="~/css/style.css" />
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="~/css/responsive.css" />
@@ -149,38 +149,38 @@
             @{
                 foreach (var item in Model.ToList().OrderByDescending(p => p.p上架時間).Take(4))
                 {
-                    <!-- start prod  -->
-                    <div class="col-lg-3 col-md-6 special-grid best-seller">
-                        <div class="products-single-custom fix">
-                            <a href="@Url.Action("ShopDetail", new {pId = item.pId })" class="shop-prod-click" title="@item.pName">
-                                <div class="box-img-hover">
-                                    <div class="type-lb">
-                                        <p class="sale">Sale</p>
-                                    </div>
-                                    <img src="@item.p圖片路徑" class="img-fluid shop-image" alt="Image" />
-                                </div>
-                            </a>
-                            <div class="why-text">
-                                <h4>@item.pName</h4>
-                                @if (item.pDiscount != null)
+                                <!-- start prod  -->
+                                <div class="col-lg-3 col-md-6 special-grid best-seller">
+                                    <div class="products-single-custom fix">
+                                        <a href="@Url.Action("ShopDetail", new {pId = item.pId })" class="shop-prod-click" title="@item.pName">
+                                            <div class="box-img-hover">
+                                                <div class="type-lb">
+                                                    <p class="sale">Sale</p>
+                                                </div>
+                                                <img src="@item.p圖片路徑" class="img-fluid shop-image" alt="Image" />
+                                            </div>
+                                        </a>
+                                        <div class="why-text">
+                                            <h4>@item.pName</h4>
+                                            @if (item.pDiscount != null)
                                 {
-                                    <h5>$ @item.p優惠價格</h5>
-                                    <del>$ @item.pPrice</del>
+                                                <h5>$ @item.p優惠價格</h5>
+                                                <del>$ @item.pPrice</del>
                                 }
                                 else
                                 {
-                                    <h5>$ @item.pPrice</h5>
+                                                <h5>$ @item.pPrice</h5>
                                 }
-                                <a data-product-id=@item.pId class="add-to-cart-coustom">
-                                    <i class="fa-solid fa-cart-plus"></i>
-                                </a>
-                                <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom">
-                                    <i class="far fa-heart"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- end prod  -->
+                                            <a data-product-id=@item.pId class="add-to-cart-coustom">
+                                                <i class="fa-solid fa-cart-plus"></i>
+                                            </a>
+                                            <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom">
+                                                <i class="far fa-heart"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- end prod  -->
                 }
             }
         </div>
@@ -188,27 +188,8 @@
 </div>
 <!-- End 新進商品  -->
 <!-- Start Blog  -->
-<div class="latest-blog">
-    <div class="container sale-info-box">
-        <div class="card">
-            <img src="~/images/sale-info.jpg" class="card-img" alt="...">
-            <div class="card-img-overlay">
-                <p class="card-title">特別寵寶驚喜箱</p>
-                <p class="card-text">UP TO</p>
-                <p class="discount ">50%</p>
-                <p class="card-text">熱賣商品與新進商品都在這裡!</p>
-                <p class="card-text">用甜甜價把寶貝喜歡的帶回家~</p>
-                <div class="go-to-sale-info">
-                    <a asp-controller="Index" asp-action="ShopDetail">
-                        <span>快來看看我!</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="timer-section">
-            <span>倒數計時</span></br>
-            <span id="timer">12:00:00</span>
-        </div>
+<div class="container-fluid " id="sp-products">
+    <div class="row justify-content-center" id="container">
     </div>
 </div>
 <!-- End Blog  -->
@@ -229,37 +210,37 @@
             @{
                 foreach (var item in Model.OrderBy(p => p.p剩餘庫存).Take(4))
                 {
-                    <div class="col-lg-3 col-md-6 special-grid best-seller">
-                        <div class="products-single-custom fix">
-                            <a href="@Url.Action("ShopDetail", new {pId =  item.pId })" class="shop-prod-click" title="@item.pName">
-                                <div class="box-img-hover">
-                                    <div class="type-lb">
-                                        <p class="sale">Sale</p>
-                                    </div>
-                                    <img src=@item.p圖片路徑 class="img-fluid shop-image" alt="Image" />
-                                </div>
-                            </a>
-                            <div class="why-text">
-                                <h4>@item.pName</h4>
-                                @if (item.pDiscount != null)
+                                <div class="col-lg-3 col-md-6 special-grid best-seller">
+                                    <div class="products-single-custom fix">
+                                        <a href="@Url.Action("ShopDetail", new {pId =  item.pId })" class="shop-prod-click" title="@item.pName">
+                                            <div class="box-img-hover">
+                                                <div class="type-lb">
+                                                    <p class="sale">Sale</p>
+                                                </div>
+                                                <img src=@item.p圖片路徑 class="img-fluid shop-image" alt="Image" />
+                                            </div>
+                                        </a>
+                                        <div class="why-text">
+                                            <h4>@item.pName</h4>
+                                            @if (item.pDiscount != null)
                                 {
-                                    <h5>$ @item.p優惠價格</h5>
-                                    <del>$ @item.pPrice</del>
+                                                <h5>$ @item.p優惠價格</h5>
+                                                <del>$ @item.pPrice</del>
                                 }
                                 else
                                 {
-                                    <h5>$ @item.pPrice</h5>
+                                                <h5>$ @item.pPrice</h5>
                                 }
-                                <a href="#" data-product-id=@item.pId class="add-to-cart-coustom">
-                                    <i class="fa-solid fa-cart-plus"></i>
-                                </a>
-                                <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom">
-                                    <i class="far fa-heart"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- end prod1  -->
+                                            <a href="#" data-product-id=@item.pId class="add-to-cart-coustom">
+                                                <i class="fa-solid fa-cart-plus"></i>
+                                            </a>
+                                            <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom">
+                                                <i class="far fa-heart"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- end prod1  -->
                 }
             }
 
@@ -541,10 +522,10 @@
     <!-- ALL JS FILES -->
     <!-- 首頁跑版 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    
+
     <!--<script src="~/js/jquery-3.2.1.min.js"></script>-->
     <script src="~/js/popper.min.js"></script>
-    
+
     <script src="~/js/review.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/js/bootstrap.min.js"></script>
@@ -566,7 +547,7 @@
     <script src="~/js/form-validator.min.js"></script>
     <script src="~/js/contact-form-script.js"></script>
     <script src="~/js/custom.js"></script>
-    
+
     <script>
         //所有頁面上不可有相同id
         var productIndexNew = $('#productIndexNew');
@@ -574,7 +555,7 @@
 
         // 點擊商品時獲取識別ID
         productIndexNew.on('click', '.shop-prod-click', function () {
-            
+
             console.log(productIndexNew);
             var productId = $(this).data('product-id');
             console.log('Clicked product ID:', productId);
@@ -759,6 +740,7 @@
             })
 
         })
+        //小動畫
         const fullScreenContainer = document.getElementById('fullScreenContainer');
         //修復遊戲側邊按鈕
         document.getElementById("go-to-game").addEventListener("click", function (event) {
@@ -820,8 +802,63 @@
 
                 setInterval(() => {
                     lines.forEach(updateLine);
-                }, 50);
+                }, 40);
             }
         });
-</script>
+        //小動畫結束
+        //抓主打商品
+        $(document).ready(function () {
+            $.ajax({
+                url: "@Url.Action("CountDownProduct","Index")",
+                type: "GET",
+                dataType: "json",
+                success: function (response) {
+                    var container = $("#container");
+                    $.each(response.data, function (index, value) {
+                        // Create a div to hold each product
+                        var productDiv = $('<div class="col-md-6 d-flex position-relative"></div>');
+                        var productDiscount = $('<div class="position-absolute top-0 start-0"><h1 class="ms-3 fs-1 text-secondary"></h1></div>').find('h1').text(value.discount).end();
+                        var productCountTime = $('<div class="d-flex flex-column align-items-end"></div>').append('<h1 class="me-3 fs-1">倒數計時</h1>', `<h1 class="me-3 countTime fs-1">${value.offDay}</h1>`);
+                        var productDivCountDownTime = $('<div class="z-1 position-absolute top-0 end-0"></div>').append(productCountTime);
+                        var productInfo = $('<div class="d-flex flex-column align-items-center"></div>').append(`<h1 class="fs-1">限時特惠</h1>`, `<h1 class="fs-1">${value.productName}</h1>`, `<a class="fs-2 text-primary" href="/Index/ShopDetail?pid=${value.productId}" >點我看更多!</a> `);
+                        var productDivProductName = $('<div class="position-absolute top-50 start-50 translate-middle"></div>').append(productInfo);
+                        var img = $('<img class="z-0 w-100">').attr('src', "https://lh3.googleusercontent.com/pw/AIL4fc_EZtvazZta8E3dQDkDsLgRbKyZw6DYqDBCTjtypGTt2rEpp-8H7rTiNY3flHpe_TrzMXApKBWi6KDA67JGwfc6TYzhc_Ji3HXCDQtV1BErpFVrSmA=w1200");
+
+                        productDiv.append(img, productDiscount, productDivCountDownTime, productDivProductName);
+                        container.append(productDiv);
+                    });
+                    handleCountdown()
+                },
+                error: function (error) {
+                    console.error("Error:", error);
+                }
+            });
+        });
+        //倒數計時
+        function handleCountdown() {
+            const times = $(".countTime").map(function () {
+                return new Date($(this).text()).getTime();
+            }).get();
+            const countTimes = setInterval(function () {
+                const now = new Date().getTime();
+                $(".countTime").each(function (index) {
+                    const distance = times[index] - now;
+                    const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+                    const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                    const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                    const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+                    if (distance < 0) {
+                        clearInterval(countTimes);
+                        $(this).html("截止");
+                    } else {
+                        $(this).html(days + "天" + hours + "時" + minutes + "分" + seconds + "秒");
+                    }
+                });
+            }, 1000);
+        }
+
+
+
+    </script>
 }
