--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/custom-home-details-wishlist.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/custom-home-details-wishlist.css
@@ -978,3 +978,7 @@ nav.navbar.bootsnav ul.nav li > a:hover {
     padding: 12px 40px;
     font-size: 16px;
 }
+
+#sp-products{
+    background-color: #DE9E4F;
+}
