更新小動畫

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -149,38 +149,38 @@
             @{
                 foreach (var item in Model.ToList().OrderByDescending(p => p.p上架時間).Take(4))
                 {
-                                <!-- start prod  -->
-                                <div class="col-lg-3 col-md-6 special-grid best-seller">
-                                    <div class="products-single-custom fix">
-                                        <a href="@Url.Action("ShopDetail", new {pId = item.pId })" class="shop-prod-click" title="@item.pName">
-                                            <div class="box-img-hover">
-                                                <div class="type-lb">
-                                                    <p class="sale">Sale</p>
-                                                </div>
-                                                <img src="@item.p圖片路徑" class="img-fluid shop-image" alt="Image" />
-                                            </div>
-                                        </a>
-                                        <div class="why-text">
-                                            <h4>@item.pName</h4>
-                                            @if (item.pDiscount != null)
+                    <!-- start prod  -->
+                    <div class="col-lg-3 col-md-6 special-grid best-seller">
+                        <div class="products-single-custom fix">
+                            <a href="@Url.Action("ShopDetail", new {pId = item.pId })" class="shop-prod-click" title="@item.pName">
+                                <div class="box-img-hover">
+                                    <div class="type-lb">
+                                        <p class="sale">Sale</p>
+                                    </div>
+                                    <img src="@item.p圖片路徑" class="img-fluid shop-image" alt="Image" />
+                                </div>
+                            </a>
+                            <div class="why-text">
+                                <h4>@item.pName</h4>
+                                @if (item.pDiscount != null)
                                 {
-                                                <h5>$ @item.p優惠價格</h5>
-                                                <del>$ @item.pPrice</del>
+                                    <h5>$ @item.p優惠價格</h5>
+                                    <del>$ @item.pPrice</del>
                                 }
                                 else
                                 {
-                                                <h5>$ @item.pPrice</h5>
+                                    <h5>$ @item.pPrice</h5>
                                 }
-                                            <a data-product-id=@item.pId class="add-to-cart-coustom">
-                                                <i class="fa-solid fa-cart-plus"></i>
-                                            </a>
-                                            <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom">
-                                                <i class="far fa-heart"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- end prod  -->
+                                <a data-product-id=@item.pId class="add-to-cart-coustom">
+                                    <i class="fa-solid fa-cart-plus"></i>
+                                </a>
+                                <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom">
+                                    <i class="far fa-heart"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end prod  -->
                 }
             }
         </div>
@@ -210,37 +210,37 @@
             @{
                 foreach (var item in Model.OrderBy(p => p.p剩餘庫存).Take(4))
                 {
-                                <div class="col-lg-3 col-md-6 special-grid best-seller">
-                                    <div class="products-single-custom fix">
-                                        <a href="@Url.Action("ShopDetail", new {pId =  item.pId })" class="shop-prod-click" title="@item.pName">
-                                            <div class="box-img-hover">
-                                                <div class="type-lb">
-                                                    <p class="sale">Sale</p>
-                                                </div>
-                                                <img src=@item.p圖片路徑 class="img-fluid shop-image" alt="Image" />
-                                            </div>
-                                        </a>
-                                        <div class="why-text">
-                                            <h4>@item.pName</h4>
-                                            @if (item.pDiscount != null)
+                    <div class="col-lg-3 col-md-6 special-grid best-seller">
+                        <div class="products-single-custom fix">
+                            <a href="@Url.Action("ShopDetail", new {pId =  item.pId })" class="shop-prod-click" title="@item.pName">
+                                <div class="box-img-hover">
+                                    <div class="type-lb">
+                                        <p class="sale">Sale</p>
+                                    </div>
+                                    <img src=@item.p圖片路徑 class="img-fluid shop-image" alt="Image" />
+                                </div>
+                            </a>
+                            <div class="why-text">
+                                <h4>@item.pName</h4>
+                                @if (item.pDiscount != null)
                                 {
-                                                <h5>$ @item.p優惠價格</h5>
-                                                <del>$ @item.pPrice</del>
+                                    <h5>$ @item.p優惠價格</h5>
+                                    <del>$ @item.pPrice</del>
                                 }
                                 else
                                 {
-                                                <h5>$ @item.pPrice</h5>
+                                    <h5>$ @item.pPrice</h5>
                                 }
-                                            <a href="#" data-product-id=@item.pId class="add-to-cart-coustom">
-                                                <i class="fa-solid fa-cart-plus"></i>
-                                            </a>
-                                            <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom">
-                                                <i class="far fa-heart"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- end prod1  -->
+                                <a href="#" data-product-id=@item.pId class="add-to-cart-coustom">
+                                    <i class="fa-solid fa-cart-plus"></i>
+                                </a>
+                                <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom">
+                                    <i class="far fa-heart"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end prod1  -->
                 }
             }
 
@@ -505,6 +505,9 @@
             </div>
         </div>
         <div class="position-absolute top-50 start-50 translate-middle">
+            <div class="popup" id="my-popup">
+                <img src="https://i.imgur.com/Db9cwjE.png" alt="Popup Image" class="popup-image">
+            </div>
             <div class="animate animate02">
                 <div class="catAnimate "></div>
             </div>
@@ -750,9 +753,14 @@
             $(".animate01").addClass("NyanCat-container01");
             $(".animate02").addClass("NyanCat-container02");
 
-            $(".animate03").one('animationend', function () {
-                window.location.href = '/Game/Index';
-            }).addClass("NyanCat-container03");
+            $(".animate03").one("animationend", function () {
+                    $("#my-popup").addClass("show");
+                    setTimeout(function () {
+                        $("#my-popup").removeClass("show");
+                    window.location.href = '/Game/Index';
+                    }, 3000);
+                })
+                .addClass("NyanCat-container03");
 
             const nyanCats = document.querySelectorAll('.animate');
             if (nyanCats.length > 0) {
