--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Order/Order.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Order/Order.cshtml
@@ -5,10 +5,6 @@
 
 @section Styles{
     <style>
-        .time-colored-text {
-            color: #de9e4f
-        }
-
         /*產品明細表格RWD*/
         .rwd-table {
 		 	 background: #fff;
@@ -81,45 +77,44 @@
 
     <h2 class="mt-3">商城訂單管理</h2>
 
-    <div class="search-row row mt-3 mb-3">
-        <div class="row align-items-center mb-3">
+    <div class="search-row row mt-3">
+@*         <div class="row align-items-center mb-3">
             訂單成立日期：
             <input type="text" class="form-control w-25" name="dates" />
-        </div>
+        </div> *@
         <div class="row align-items-center mb-3">
             付款方式：
             <select class="form-select w-25" id="payList">
                 <option value="" selected>全部訂單</option>
-                <option value="取貨付款">取貨付款</option>
+                <option value="貨到付款">貨到付款</option>
                 <option value="信用卡">信用卡</option>
+                <option value="ATM轉帳">ATM轉帳</option>
+                <option value="行動支付">行動支付</option>
             </select>
         </div>
         <div class="row align-items-center mb-3">
             配送方式：
             <select class="form-select w-25" id="deliveryList">
                 <option value="" selected>全部訂單</option>
-                <option value="7-Eleven">7-Eleven</option>
-                <option value="全家">全家</option>
+                <option value="全家取貨">全家取貨</option>
+                <option value="7-11取貨">7-11取貨</option>
+                <option value="宅配">宅配</option>
             </select>
         </div>
         <div class="row align-items-center mb-3">
             訂單狀態：
             <select class="form-select w-25" id="statusList">
                 <option value="" selected>全部訂單</option>
-                <option value="">處理中</option>
-                <option value="">已完成</option>
+                <option value="處理中">處理中</option>
+                <option value="已確認">已確認</option>
+                <option value="已完成">已完成</option>
+                <option value="處理中">已取消</option>
             </select>
         </div>
-        <div class="row align-items-center mb-3">
-            關鍵字搜尋：
-            <input type="text" class="form-control" style="width:25%;" />
-        </div>
-
-        <button type="button" class="keyword_input col-xl-1">查詢</button>
     </div>
 
 
-    <div class="container-fluid mt-4">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-12">
                 <!--表格-->
@@ -197,7 +192,7 @@
                     <div class="modal-dialog modal-lg modal-dialog-centered">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title bg-dark text-white" id="exampleModalToggleLabel">
+                                <h5 class="modal-title" id="exampleModalToggleLabel">
                                     詳細資訊
                                 </h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
@@ -218,11 +213,11 @@
                                         </button>
                                     </div>
                                 </nav>
-                                <div class="tab-content" id="nav-tabContent">
+                                <div class="tab-content mt-3" id="nav-tabContent">
                                     <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
                                          aria-labelledby="nav-home-tab">
                                         <div class="row">
-                                            <div class="col-12 col-lg-6" style="border-right: 1px solid #000;">
+                                            <div class="col-12 col-lg-6" style="border-right: 1px solid #aaa;">
                                                 <h5><strong>訂購人(會員)</strong></h5>
                                                 <p id="order_memberId"></p>
                                                 <p id="order_name"></p>
@@ -307,7 +302,7 @@
                 });
 
                 //==================datatable
-                $('#order-table').DataTable({
+                var table = $('#order-table').DataTable({
                     "ajax": '@Url.Action("ShowOrderTotal", "Order")',
 
                     "columns": [
@@ -360,7 +355,20 @@
                                 return data;
                             }
                         },
-                        { data: 'statusName' },
+                        {
+                            data: 'statusName',
+                            render: function (data, type, row, meta) {
+                                if (data == "已完成") {
+                                    return '<span class="badge rounded-pill bg-success fs-6">已完成</span>';
+                                } else if (data == "處理中") {
+                                    return '<span class="badge rounded-pill bg-danger fs-6">處理中</span>';
+                                } else if (data == "已確認") {
+                                    return '<span class="badge rounded-pill bg-primary fs-6">已確認</span>';
+                                } else {
+                                    return '<span class="badge rounded-pill bg-warning text-dark fs-6">已取消</span>';
+                                }
+                            }
+                        },
                         {
                             data: null, // 這裡設置為 null，因為我們會在 render 中創建按鈕
                             render: function (data, type, row, meta) {
@@ -376,9 +384,43 @@
                             }
                         },
                     ],
+                    columnDefs: [
+                        { targets: 5, searchable: true },
+                        { targets: 6, searchable: true },
+                        { targets: 9, searchable: true }
+                        // 其他列...
+                    ],
                     "paging": true, //分頁功能
                     responsive: true, //RWD
-                    "searching": false, //隱藏搜尋框
+                    // "searching": false, //隱藏搜尋框
+                    "order": [[0, 'desc']]  // 在這裡指定初始排序的列和順序，0 表示第一列（memberId），'desc' 表示降序
+                });
+
+                // 綁定select元素的change事件，當選擇條件改變時，重新過濾表格資料
+                $('#payList').on('change', function () {
+                    var filterOption1 = $(this).val();
+
+                    // 使用DataTable的column().search()方法進行過濾
+                    table.column(5).search(filterOption1).draw();
+                    // 其他列...
+                });
+
+                $('#deliveryList').on('change', function () {
+                    // var filterOption1 = $('#payList').val();
+                    var filterOption2 = $(this).val();
+
+                    // 使用DataTable的column().search()方法進行過濾
+                    table.column(6).search(filterOption2).draw();
+                    // 其他列...
+                });
+
+                $('#statusList').on('change', function () {
+                    // var filterOption1 = $('#payList').val();
+                    var filterOption3 = $(this).val();
+
+                    // 使用DataTable的column().search()方法進行過濾
+                    table.column(9).search(filterOption3).draw();
+                    // 其他列...
                 });
 
                 //==================按下「詳細資料」按鈕的點擊事件處理
