--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -149,38 +149,38 @@
             @{
                 foreach (var item in Model.ToList().OrderByDescending(p => p.p上架時間).Take(4))
                 {
-                    <!-- start prod  -->
-                    <div class="col-lg-3 col-md-6 special-grid best-seller">
-                        <div class="products-single-custom fix">
-                            <a href="@Url.Action("ShopDetail", new {pId = item.pId })" class="shop-prod-click" title="@item.pName">
-                                <div class="box-img-hover">
-                                    <div class="type-lb">
-                                        <p class="sale">Sale</p>
-                                    </div>
-                                    <img src="@item.p圖片路徑" class="img-fluid shop-image" alt="Image" />
-                                </div>
-                            </a>
-                            <div class="why-text">
-                                <h4>@item.pName</h4>
-                                @if (item.pDiscount != null)
+                            <!-- start prod  -->
+                            <div class="col-lg-3 col-md-6 special-grid best-seller">
+                                <div class="products-single-custom fix">
+                                    <a href="@Url.Action("ShopDetail", new {pId = item.pId })" class="shop-prod-click" title="@item.pName">
+                                        <div class="box-img-hover">
+                                            <div class="type-lb">
+                                                <p class="sale">Sale</p>
+                                            </div>
+                                            <img src="@item.p圖片路徑" class="img-fluid shop-image" alt="Image" />
+                                        </div>
+                                    </a>
+                                    <div class="why-text">
+                                        <h4>@item.pName</h4>
+                                        @if (item.pDiscount != null)
                                 {
-                                    <h5>$ @item.p優惠價格</h5>
-                                    <del>$ @item.pPrice</del>
+                                            <h5>$ @item.p優惠價格</h5>
+                                            <del>$ @item.pPrice</del>
                                 }
                                 else
                                 {
-                                    <h5>$ @item.pPrice</h5>
+                                            <h5>$ @item.pPrice</h5>
                                 }
-                                <a data-product-id=@item.pId class="add-to-cart-coustom">
-                                    <i class="fa-solid fa-cart-plus"></i>
-                                </a>
-                                <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom">
-                                    <i class="far fa-heart"></i>
-                                </a>
+                                        <a data-product-id=@item.pId class="add-to-cart-coustom">
+                                            <i class="fa-solid fa-cart-plus"></i>
+                                        </a>
+                                        <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom">
+                                            <i class="far fa-heart"></i>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <!-- end prod  -->
+                            <!-- end prod  -->
                 }
             }
         </div>
@@ -210,37 +210,37 @@
             @{
                 foreach (var item in Model.OrderBy(p => p.p剩餘庫存).Take(4))
                 {
-                    <div class="col-lg-3 col-md-6 special-grid best-seller">
-                        <div class="products-single-custom fix">
-                            <a href="@Url.Action("ShopDetail", new {pId =  item.pId })" class="shop-prod-click" title="@item.pName">
-                                <div class="box-img-hover">
-                                    <div class="type-lb">
-                                        <p class="sale">Sale</p>
-                                    </div>
-                                    <img src=@item.p圖片路徑 class="img-fluid shop-image" alt="Image" />
-                                </div>
-                            </a>
-                            <div class="why-text">
-                                <h4>@item.pName</h4>
-                                @if (item.pDiscount != null)
+                            <div class="col-lg-3 col-md-6 special-grid best-seller">
+                                <div class="products-single-custom fix">
+                                    <a href="@Url.Action("ShopDetail", new {pId =  item.pId })" class="shop-prod-click" title="@item.pName">
+                                        <div class="box-img-hover">
+                                            <div class="type-lb">
+                                                <p class="sale">Sale</p>
+                                            </div>
+                                            <img src=@item.p圖片路徑 class="img-fluid shop-image" alt="Image" />
+                                        </div>
+                                    </a>
+                                    <div class="why-text">
+                                        <h4>@item.pName</h4>
+                                        @if (item.pDiscount != null)
                                 {
-                                    <h5>$ @item.p優惠價格</h5>
-                                    <del>$ @item.pPrice</del>
+                                            <h5>$ @item.p優惠價格</h5>
+                                            <del>$ @item.pPrice</del>
                                 }
                                 else
                                 {
-                                    <h5>$ @item.pPrice</h5>
+                                            <h5>$ @item.pPrice</h5>
                                 }
-                                <a href="#" data-product-id=@item.pId class="add-to-cart-coustom">
-                                    <i class="fa-solid fa-cart-plus"></i>
-                                </a>
-                                <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom">
-                                    <i class="far fa-heart"></i>
-                                </a>
+                                        <a href="#" data-product-id=@item.pId class="add-to-cart-coustom">
+                                            <i class="fa-solid fa-cart-plus"></i>
+                                        </a>
+                                        <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom">
+                                            <i class="far fa-heart"></i>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <!-- end prod1  -->
+                            <!-- end prod1  -->
                 }
             }
 
@@ -254,184 +254,9 @@
         <div class="col-lg-12">
             <div class="title-all text-center">
                 <h1>推薦</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet lacus enim.</p>
+                <p>熱銷好評商品</p>
             </div>
             <div class="featured-products-box owl-carousel owl-theme">
-                <div class="item">
-                    <div class="products-single fix">
-                        <img src="~/images/img-pro-01.jpg" class="img-fluid" alt="Image">
-                        <div class="why-text">
-                            <div class="d-flex align-items-center justify-content-around mt-3">
-
-                                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
-                                     class="bi bi-person-circle" viewBox="0 0 16 16">
-                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-                                    <path fill-rule="evenodd"
-                                          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                                </svg>
-
-
-                                <span class="slides-span">陳xx東</span>
-
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <input name="input-1-ltr-star-xs" class="kv-ltr-theme-fas-star" value="5" dir="ltr" data-size="lg"
-                                       data-show-clear="false" data-show-caption="false">
-                            </div>
-                            <p>真的非常好用 我也很推薦給其他人 真的非常好用</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="products-single fix">
-                        <img src="~/images/img-pro-01.jpg" class="img-fluid" alt="Image">
-                        <div class="why-text">
-                            <div class="d-flex align-items-center justify-content-around mt-3">
-
-                                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
-                                     class="bi bi-person-circle" viewBox="0 0 16 16">
-                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-                                    <path fill-rule="evenodd"
-                                          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                                </svg>
-
-
-                                <span class="slides-span">陳xx東</span>
-
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <input name="input-1-ltr-star-xs" class="kv-ltr-theme-fas-star" value="5" dir="ltr" data-size="lg"
-                                       data-show-clear="false" data-show-caption="false">
-                            </div>
-                            <p>真的非常好用 我也很推薦給其他人 真的非常好用</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="products-single fix">
-                        <img src="~/images/img-pro-01.jpg" class="img-fluid" alt="Image">
-                        <div class="why-text">
-                            <div class="d-flex align-items-center justify-content-around mt-3">
-
-                                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
-                                     class="bi bi-person-circle" viewBox="0 0 16 16">
-                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-                                    <path fill-rule="evenodd"
-                                          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                                </svg>
-
-
-                                <span class="slides-span">陳xx東</span>
-
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <input name="input-1-ltr-star-xs" class="kv-ltr-theme-fas-star" value="5" dir="ltr" data-size="lg"
-                                       data-show-clear="false" data-show-caption="false">
-                            </div>
-                            <p>真的非常好用 我也很推薦給其他人 真的非常好用</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="products-single fix">
-                        <img src="~/images/img-pro-01.jpg" class="img-fluid" alt="Image">
-                        <div class="why-text">
-                            <div class="d-flex align-items-center justify-content-around mt-3">
-
-                                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
-                                     class="bi bi-person-circle" viewBox="0 0 16 16">
-                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-                                    <path fill-rule="evenodd"
-                                          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                                </svg>
-
-
-                                <span class="slides-span">陳xx東</span>
-
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <input name="input-1-ltr-star-xs" class="kv-ltr-theme-fas-star" value="5" dir="ltr" data-size="lg"
-                                       data-show-clear="false" data-show-caption="false">
-                            </div>
-                            <p>真的非常好用 我也很推薦給其他人 真的非常好用</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="products-single fix">
-                        <img src="~/images/img-pro-01.jpg" class="img-fluid" alt="Image">
-                        <div class="why-text">
-                            <div class="d-flex align-items-center justify-content-around mt-3">
-
-                                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
-                                     class="bi bi-person-circle" viewBox="0 0 16 16">
-                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-                                    <path fill-rule="evenodd"
-                                          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                                </svg>
-
-
-                                <span class="slides-span">陳xx東</span>
-
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <input name="input-1-ltr-star-xs" class="kv-ltr-theme-fas-star" value="5" dir="ltr" data-size="lg"
-                                       data-show-clear="false" data-show-caption="false">
-                            </div>
-                            <p>真的非常好用 我也很推薦給其他人 真的非常好用</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="products-single fix">
-                        <img src="~/images/img-pro-01.jpg" class="img-fluid" alt="Image">
-                        <div class="why-text">
-                            <div class="d-flex align-items-center justify-content-around mt-3">
-
-                                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
-                                     class="bi bi-person-circle" viewBox="0 0 16 16">
-                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-                                    <path fill-rule="evenodd"
-                                          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                                </svg>
-
-
-                                <span class="slides-span">陳xx東</span>
-
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <input name="input-1-ltr-star-xs" class="kv-ltr-theme-fas-star" value="5" dir="ltr" data-size="lg"
-                                       data-show-clear="false" data-show-caption="false">
-                            </div>
-                            <p>真的非常好用 我也很推薦給其他人 真的非常好用</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="products-single fix">
-                        <img src="~/images/img-pro-01.jpg" class="img-fluid" alt="Image">
-                        <div class="why-text">
-                            <div class="d-flex align-items-center justify-content-around mt-3">
-
-                                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
-                                     class="bi bi-person-circle" viewBox="0 0 16 16">
-                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-                                    <path fill-rule="evenodd"
-                                          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                                </svg>
-
-
-                                <span class="slides-span">陳xx東</span>
-
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <input name="input-1-ltr-star-xs" class="kv-ltr-theme-fas-star" value="5" dir="ltr" data-size="lg"
-                                       data-show-clear="false" data-show-caption="false">
-                            </div>
-                            <p>真的非常好用 我也很推薦給其他人 真的非常好用</p>
-                        </div>
-                    </div>
-                </div>
                 <div class="item">
                     <div class="products-single fix">
                         <img src="~/images/img-pro-01.jpg" class="img-fluid" alt="Image">
@@ -841,6 +666,18 @@
                     console.error("Error:", error);
                 }
             });
+            //抓評論
+            $.ajax({
+                url: "@Url.Action("GetReivews","Index")",
+                type:"GET",
+                dataType:"json",
+                success: function (response) {
+                    console.log(response.data)
+                },
+                error: function (error) {
+                    console.log("Error:", error)
+                }
+            })
         });
         //倒數計時
         function handleCountdown() {
@@ -865,7 +702,6 @@
                 });
             }, 1000);
         }
-
 
 
     </script>
