--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/AdminManage/AdminManage.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/AdminManage/AdminManage.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "AdminManage";
+    ViewData["Title"] = "管理員管理系統";
     Layout = "~/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml";
 }
 
