--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -1,6 +1,6 @@
 ﻿@model prjCatChaOnlineShop.Models.GameProductTotal
 @{
-    ViewData["Title"] = "GameProduct";
+    ViewData["Title"] = "遊戲產品管理";
     Layout = "~/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml";
 }
 
