--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Member/Member.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Member/Member.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "ShowMemeberInfo";
+    ViewData["Title"] = "商城會員管理";
     Layout = "~/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml";
 }
 
