--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/News/news.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/News/news.cshtml
@@ -2,7 +2,7 @@
 
 
 @{
-    ViewData["Title"] = "News";
+    ViewData["Title"] = "公告消息管理";
     Layout = "~/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml";
 }
 
