--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Product/Product.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Product/Product.cshtml
@@ -1,7 +1,7 @@
 ﻿@model prjCatChaOnlineShop.Models.ViewModels.CproductsTotal
 
 @{
-    ViewData["Title"] = "Product";
+    ViewData["Title"] = "商城商品管理";
     Layout = "~/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml";
 }
 
