--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/ProductReview/ProductReview.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/ProductReview/ProductReview.cshtml
@@ -1,7 +1,7 @@
 ﻿@model prjCatChaOnlineShop.Models.ViewModels.CproductsReviews
 
 @{
-    ViewData["Title"] = "ProductReview";
+    ViewData["Title"] = "商品評論管理";
     Layout = "~/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml";
 }
 
