--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Service/Service.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Service/Service.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Service";
+    ViewData["Title"] = "客服回覆管理";
     Layout = "~/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml";
 }
 
