--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Order/Order.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Order/Order.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "ShopOrder";
+    ViewData["Title"] = "商城訂單管理";
     Layout = "~/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml";
 }
 
