修正商品預覽圖片

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -218,7 +218,7 @@
                                         <div class=" mb-3 align-items-center mt-3">
                                             <label>目前圖片：</label>
                                             <div class="d-flex justify-content-center">
-                                                <img id="previewImage" src="" alt="Image Preview" class="w-100 border">
+                                                <img id="previewImage" src="" class="w-100 border">
                                             </div>
                                         </div>
 
