--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Shared/CatCha_Layout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Shared/CatCha_Layout.cshtml
@@ -105,7 +105,7 @@
                             </a>
                         </li>
                         <li class="Login">
-                            <a asp-controller="MemberLogin" asp-action="Login">
+                            <a id="loginLink" asp-controller="MemberLogin" asp-action="Login">
                                 <span class="LoginText">登入/註冊</span>
                             </a>
                         </li>
