--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -12,7 +12,7 @@
 
 <!-- Start 遊戲畫面 -->
 
-<div class="canvas-container" style="display:none;">
+<div class="canvas-container" @*style="display:none;"*@>
     <div class="gamelayer">
         <canvas id="Canvaslobby"></canvas>
         <!-- Start j轉蛋 -->
