遊戲與商城登入連動完成 TODO: 登入後判斷是否為第一次進入遊戲 & 移除遊戲內重複登入按鈕

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -134,8 +134,8 @@
     <button id="registerButton">註冊</button>
 </div>
 
-<button type="submit" id="testDBlogin" style="display: none;">測試資料庫登入</button>
-<button type="submit" id="testGameDB" style="display: none;">測試寫入遊戲資料</button>
+<button type="submit" id="testDBlogin" @*style="display: none;"*@>測試資料庫登入</button>
+<button type="submit" id="testGameDB" @*style="display: none;"*@>測試寫入遊戲資料</button>
 <!-- End 遊戲畫面 -->
 <!-- 遊戲相關js -->
 @section Scripts{
