--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -121,7 +121,7 @@
     </div>
     <!-- End Canvas遊戲畫布 -->
 </div>
-<div id="userMemberidlogin">
+<div id="userMemberidlogin" style="display: none";>
     <label for="memberId">請輸入memberId: </label>
     <input type="text" id="memberId" name="memberId" pattern="[0-9]*"><br><br>
     <input type="submit" id="memberIdLogin" value="Submit">
@@ -135,7 +135,7 @@
 </div>
 
 <button type="submit" id="testDBlogin" @*style="display: none;"*@>測試資料庫登入</button>
-<button type="submit" id="testGameDB" @*style="display: none;"*@>測試寫入遊戲資料</button>
+
 <!-- End 遊戲畫面 -->
 <!-- 遊戲相關js -->
 @section Scripts{
